name:                pfennig-client
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/pfennig-client#readme
license:             MIT
license-file:        LICENSE
author:              Samuel Schuhmacher, Marcel Büsing
maintainer:          info@muhbaasu.de
copyright:           2015 Muhbaasu
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Expenditure, Login, Leaflet, ReflexExtensions, Layout
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , clay
                     , containers >= 0.5.6
                     , file-embed >= 0.0.9
                     , ghcjs-base
                     , ghcjs-dom > 0.2.3
                     , reflex >= 0.3
                     , reflex-dom >= 0.2
                     , safe >= 0.3
                     , text >= 1.2.1
                     , time >= 1.5
                     , transformers >= 0.4.3
                     , utf8-string >= 1.0.1
  default-language:    Haskell2010

executable pfennig-client-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , pfennig-client
                     , reflex >= 0.3
                     , reflex-dom >= 0.2
                     , text >= 1.2.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pfennig-client